k8s/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue
  labels:
    app: devops-demo
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-demo
      version: blue
  template:
    metadata:
      labels:
        app: devops-demo
        version: blue
    spec:
      containers:
      - name: app
        image: devops-demo:latest
        imagePullPolicy: Never
        command: ["python", "app.py"]
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: database-volume
          mountPath: /app/data
      volumes:
      - name: database-volume
        emptyDir: {}
