k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-blue-svc
spec:
  selector:
    app: devops-demo
    version: blue
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app-green-svc
spec:
  selector:
    app: devops-demo
    version: green
  ports:
  - port: 80
    targetPort: 5000
