k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-blue-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: devops-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-green-svc
            port:
              number: 80
